change width to prevent shift on mobile

--- a/Control.Geocoder.css
+++ b/Control.Geocoder.css
@@ -13,13 +13,14 @@
 	border: 2px solid rgba(0,0,0,0.2);
 	background-clip: padding-box;
     line-height: 30px;
+    position:relative;
     margin: 0 10px 0 60px;
     width:30px;
     height:30px;
+
 }
 
 .leaflet-touch .leaflet-control-geocoder.leaflet-control-geocoder-expanded {
-	line-height:30px;
 	width:auto!important;
 	height:auto !important;
 }
@@ -79,9 +80,9 @@
 }
 
 .leaflet-touch .leaflet-control-geocoder-expanded input, .leaflet-control-geocoder-error {
-	width: 70%;
+	width: 75%;
 	height: 26px;
-	margin: 0 10px 0 4px;
+	/*margin: 0 10px 0 4px;*/
 }
 
 .leaflet-control-geocoder-form input:focus {
